--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </p>
     <H1>Terms of Services</H1>
     <p>
-        This privacy policy governs the use of the Tixer application ("App") developed by Joao Pedro. The App is a time zone management tool designed to assist users in coordinating and scheduling across different time zones. The App only records the information provided by the user. The collected information is stored solely on the user's device and is not shared with third parties. This privacy policy may be updated from time to time. It is recommended to periodically review this privacy policy. Please note that this is a template privacy policy, and you should adapt it to accurately reflect the data collection, usage, and storage practices of your RUCardapio app. It's important to consult with legal professionals or privacy experts to ensure that your privacy policy complies with relevant laws and regulations.
+        This privacy policy governs the use of the RUCardapio application ("App") developed by Joao Pedro. The App is a time zone management tool designed to assist users in coordinating and scheduling across different time zones. The App only records the information provided by the user. The collected information is stored solely on the user's device and is not shared with third parties. This privacy policy may be updated from time to time. It is recommended to periodically review this privacy policy. Please note that this is a template privacy policy, and you should adapt it to accurately reflect the data collection, usage, and storage practices of your RUCardapio app. It's important to consult with legal professionals or privacy experts to ensure that your privacy policy complies with relevant laws and regulations.
     </p>
 </body>
 </html>
